--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "stara-astar"
+name = "stara-astar-naive"
 version = "0.1.0"
 description = ""
 authors = ["Valerius Mattfeld <mail@valerius.me>"]
